--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,17 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+.text-gradient {
+  background: linear-gradient(45deg, #ab26b8, #47a8d4 80%);
+  -webkit-background-clip: text; 
+  -webkit-text-fill-color: transparent;
+}
+.active {
+  
+  padding: 5px 18px;
+  border-radius: 5px;
+  
+  background: linear-gradient(45deg, #e944d3, #25baff 80%);
+  
+
+}
