--- a/src/index.css
+++ b/src/index.css
@@ -16,3 +16,14 @@
   
 
 }
+.profile-picture {
+  height: 40px;
+  width: 40px;
+  border-radius: 50%;
+  overflow: hidden;
+}
+.rounded-profile{
+  height: 100%;
+  width: 100%;
+  object-fit: cover;
+}
