--- a/src/index.css
+++ b/src/index.css
@@ -8,11 +8,7 @@
 }
 .active {
   
-  padding: 5px 18px;
-  
-  border-radius: 5px;
-  
-  background: linear-gradient(45deg, #e944d3, #25baff 80%);
+ font-weight: bold;
   
 
 }
@@ -26,4 +22,24 @@
   height: 100%;
   width: 100%;
   object-fit: cover;
+}
+@media (max-width:1500px) {
+  .profile-picture {
+    height: 35px;
+    width: 35px;
+    
+    left: 10%;
+    overflow: hidden;
+  }
+  
+}
+@media (max-width:900px) {
+  .profile-picture {
+    height: 30px;
+    width: 30px;
+    
+    left: 10%;
+    overflow: hidden;
+  }
+  
 }
